--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NepCode/ecommerce_mern.git"
+    "url": "git+https://github.com/NepCode/mern_ecommerce.git"
   },
   "author": "Antonio Aguila",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/NepCode/ecommerce_mern/issues"
+    "url": "https://github.com/NepCode/mern_ecommerce/issues"
   },
-  "homepage": "https://github.com/NepCode/ecommerce_mern#readme",
+  "homepage": "https://github.com/NepCode/mern_ecommerce#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.24.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
