--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@inovua/reactdatagrid-community": "^4.0.25",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
